<resources>
    <string name="app_name">Weather Forecast</string>

    <!-- Menu -->
    <string name="home">Home</string>
    <string name="alert">Alert</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>

    <!-- Home page -->
    <string name="today">Today</string>
    <string name="week">Next Forecast</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="cloud">Cloudiness</string>

    <!-- Settings page -->
    <string name="location">Location</string>
    <string name="location_0">Current Location</string>
    <string name="location_1">GPS</string>
    <string name="location_2">On Map</string>
    <string name="location_3">Saved Locations</string>
    <string name="notification">Notifications</string>
    <string name="language">Language</string>
    <string name="language_1">English</string>
    <string name="language_2">Arabic</string>
    <string name="t_units">Temperature</string>
    <string name="t_unit_1">Kelvin</string>
    <string name="t_unit_2">Celsius</string>
    <string name="t_unit_3">Fahrenheit</string>
    <string name="w_units">Wind Speed</string>
    <string name="w_unit_1">m/s</string>
    <string name="w_unit_2">mi/hr</string>
    <string name="rv_alerts">Remove All Alerts</string>
    <string name="rv_locations">Remove All Locations</string>

    <!-- map page -->
    <string name="save_location">Saved Locations</string>
    <string name="locations">Locations</string>
    <string name="map">Map</string>
    <string name="location_permission_title">Location Permission</string>
    <string name="location_permission_body">Location permission is required, Please allow location permission from setting</string>
    <string name="turnon_location">Turn On Location</string>

    <!-- Favourite page -->
    <string name="add_location">Add Location</string>

    <!-- Alarm page -->
    <string name="setAlert">Set Alert</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="notification_1">Notification</string>
    <string name="notification_2">Alarm</string>
    <string name="save">Save</string>
    <string name="dialog_location">Select Location</string>
    <string name="dialog_date">Select Date</string>
    <string name="dialog_time">Select Time</string>
    <string name="select_alert_type">Select Alert Type</string>
    <string name="alert_title">Weather Alert</string>
    <string name="notification_permission_title">Notification Permission</string>
    <string name="notification_permission_body">Notification permission is required, Please allow notification permission from setting</string>
    <string name="turnon_notification">Turn On Notification</string>
    <string name="allow">Allow</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>

    <!-- action dialog -->
    <string name="delete_alert_title">Alert Deletion</string>
    <string name="delete_alert_body">Are you sure you want to delete this alert?</string>
    <string name="delete_location_title">Location Deletion</string>
    <string name="delete_location_body">Are you sure you want to delete this location?</string>
    <string name="delete_all_alert_title">Alerts Deletion</string>
    <string name="delete_all_alert_body">Are you sure you want to delete all alerts?</string>
    <string name="delete_all_location_title">Locations Deletion</string>
    <string name="delete_all_location_body">Are you sure you want to delete all saved locations?</string>
    <string name="connection_title">No Network Connection</string>
    <string name="connection_body">Make sure you are connected to the Internet to use this feature</string>
    <string name="no_connection_notification">We apologize that we are unable to display the weather alert. Please connect to the Internet.</string>


</resources>