<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color_1"
    tools:context=".View.AlarmFragment">

    <TextView
        android:id="@+id/ltxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:padding="15dp"
        android:background="@drawable/bg_color_4"
        android:text="Ain Shams"
        android:textColor="@color/dark_color_1"
        android:textSize="18sp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/ltxt"
        app:layout_constraintEnd_toEndOf="@+id/ltxt"
        app:layout_constraintTop_toBottomOf="@+id/ltxt"/>
    <ImageButton
        android:id="@+id/lIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_arrow"
        android:backgroundTint="@color/noColor"
        app:tint="@color/dark_color_1"
        app:layout_constraintTop_toTopOf="@+id/location"
        app:layout_constraintBottom_toBottomOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/dtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/ltxt"
        app:layout_constraintEnd_toEndOf="@+id/ltxt"
        app:layout_constraintTop_toBottomOf="@+id/location"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:padding="15dp"
        android:background="@drawable/bg_color_4"
        android:text="25 Nov, 2024"
        android:textColor="@color/dark_color_1"
        android:textSize="18sp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/dtxt"
        app:layout_constraintEnd_toEndOf="@+id/dtxt"
        app:layout_constraintTop_toBottomOf="@+id/dtxt"/>
    <ImageButton
        android:id="@+id/dIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_arrow"
        android:backgroundTint="@color/noColor"
        app:tint="@color/dark_color_1"
        app:layout_constraintTop_toTopOf="@+id/date"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/ttxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/dtxt"
        app:layout_constraintEnd_toEndOf="@+id/dtxt"
        app:layout_constraintTop_toBottomOf="@+id/date"/>
    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:padding="15dp"
        android:background="@drawable/bg_color_4"
        android:text="03:48 AM"
        android:textColor="@color/dark_color_1"
        android:textSize="18sp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/ttxt"
        app:layout_constraintEnd_toEndOf="@+id/ttxt"
        app:layout_constraintTop_toBottomOf="@+id/ttxt"/>
    <ImageButton
        android:id="@+id/tIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_arrow"
        android:backgroundTint="@color/noColor"
        app:tint="@color/dark_color_1"
        app:layout_constraintTop_toTopOf="@+id/time"
        app:layout_constraintBottom_toBottomOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/ntxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/type"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/ttxt"
        app:layout_constraintEnd_toEndOf="@+id/ttxt"
        app:layout_constraintTop_toBottomOf="@+id/time"/>
    <RadioGroup
        android:id="@+id/notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/ntxt"
        app:layout_constraintEnd_toEndOf="@+id/ntxt"
        app:layout_constraintTop_toBottomOf="@+id/ntxt">
        <RadioButton
            android:id="@+id/notification_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/notification_1"
            android:textSize="20dp"
            android:textColor="@color/white"
            style="@style/Widget.App.RadioButton"/>
        <RadioButton
            android:id="@+id/notification_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:text="@string/notification_2"
            android:textSize="20dp"
            android:textColor="@color/white"
            style="@style/Widget.App.RadioButton"/>
    </RadioGroup>

    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:text="@string/save"
        android:textSize="28sp"
        android:textColor="@color/dark_color_4"
        android:textStyle="bold"
        android:backgroundTint="@color/dark_color_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification"/>

</androidx.constraintlayout.widget.ConstraintLayout>