<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color_1"
    tools:context=".HomeFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/weatherImg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/bg_img_1"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            
            <TextView
                android:id="@+id/weatherTempText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="28 ºC"
                android:textColor="@color/white"
                android:textSize="50dp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/weatherImg"
                app:layout_constraintStart_toStartOf="@+id/weatherImg"
                app:layout_constraintTop_toBottomOf="@+id/weatherImg"/>

            <TextView
                android:id="@+id/weatherDescText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Light Rain"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/weatherTempText"
                app:layout_constraintStart_toStartOf="@+id/weatherTempText"
                app:layout_constraintTop_toBottomOf="@+id/weatherTempText"/>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_color_2"
                android:alpha="0.3"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="@+id/weatherDescText"
                app:layout_constraintEnd_toEndOf="@+id/weatherDescText"
                app:layout_constraintTop_toBottomOf="@+id/weatherDescText"/>

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/grid"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:columnCount="2"
                app:rowCount="2"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/view3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical"
                    app:layout_column="0"
                    app:layout_row="0" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_humidity"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:alpha="0.8"
                    android:textSize="22dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="77%"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical"
                    app:layout_column="1"
                    app:layout_row="0" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_wind"
                        android:text="@string/wind"
                        android:textColor="@color/white"
                        android:alpha="0.8"
                        android:textSize="22dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="2.06 m/s"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="22dp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical"
                    app:layout_column="0"
                    app:layout_row="1" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_cloud"
                        android:text="@string/cloud"
                        android:textColor="@color/white"
                        android:alpha="0.8"
                        android:textSize="22dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="40%"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="22dp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical"
                    app:layout_column="1"
                    app:layout_row="1" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_pressure"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:alpha="0.8"
                        android:textSize="22dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="1021 hpa"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="22dp"
                        android:textStyle="bold"/>
                </LinearLayout>


            </androidx.gridlayout.widget.GridLayout>


            <TextView
                android:id="@+id/weatherLocText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="Ain Shams, Cairo"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/weatherTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="04:07"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_color_2"
                android:alpha="0.5"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintTop_toBottomOf="@+id/view3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:text="@string/today"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/view1"
                app:layout_constraintTop_toTopOf="@+id/view1"/>

            <TextView
                android:id="@+id/weatherDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:text="Mar, 9"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="@+id/view1"
                app:layout_constraintTop_toTopOf="@+id/view1"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/todayRecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintStart_toStartOf="@+id/view1"
                app:layout_constraintEnd_toEndOf="@+id/view1"
                app:layout_constraintTop_toTopOf="@+id/view1"/>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_color_2"
                android:alpha="0.5"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="@+id/view1"
                app:layout_constraintEnd_toEndOf="@+id/view1"
                app:layout_constraintTop_toBottomOf="@+id/view1"
                app:layout_constraintBottom_toBottomOf="@+id/weekRecyclerView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:text="@string/week"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weekRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>