<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color_1"
    tools:context=".View.WeatherDetailsFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/flagImg"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:src="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Ain Shams, Cairo"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:layout_constraintStart_toEndOf="@+id/flagImg"
                app:layout_constraintTop_toTopOf="@+id/flagImg"
                app:layout_constraintBottom_toBottomOf="@+id/flagImg" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/bg_img_1"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="28 ºC"
                android:textColor="@color/white"
                android:textSize="50dp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/image"
                app:layout_constraintStart_toStartOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/image"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Light Rain"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/temperature"
                app:layout_constraintStart_toStartOf="@+id/temperature"
                app:layout_constraintTop_toBottomOf="@+id/temperature"/>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_color_2"
                android:alpha="0.3"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintEnd_toEndOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description"/>

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/grid"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:columnCount="2"
                app:rowCount="2"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/view3">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical"
                    app:layout_column="0"
                    app:layout_row="0" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_humidity"
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        android:alpha="0.8"
                        android:textSize="22dp" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="77%"
                        android:textColor="@color/white"
                        android:textSize="22dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical"
                    app:layout_column="1"
                    app:layout_row="0" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_cloud"
                        android:text="@string/cloud"
                        android:textColor="@color/white"
                        android:alpha="0.8"
                        android:textSize="22dp" />
                    <TextView
                        android:id="@+id/cloud"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="40%"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="22dp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical"
                    app:layout_column="0"
                    app:layout_row="1" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_pressure"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:alpha="0.8"
                        android:textSize="22dp" />
                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="1021 hpa"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="22dp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical"
                    app:layout_column="1"
                    app:layout_row="1" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_wind"
                        android:text="@string/wind"
                        android:textColor="@color/white"
                        android:alpha="0.8"
                        android:textSize="22dp" />
                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="2.06 m/s"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="22dp"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.gridlayout.widget.GridLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>